# IMAGE-LAND-LUE

./: .gitignore  README.md  convert_outfiles.py  environment.yml  full_environment.yml  landalloc_lue.py  parameters.py  pyproject.toml  read.py  read_outfiles.py
.github/workflows/: sphinx-commit.yaml
docs/source/: conf.py  convert_outfiles.rst  index.rst  landalloc.rst  modules.rst  np_test_module.rst  read.rst  single_timestep.rst  write.rst
docs/source/md_files/: Biofuel Crops.md  Documentation Style.md  Food Crops.md  Function Request.md  Grass.md  IMAGE-LAND Allocation and Formulae.md  Inputs.md  Key Differences.md  Land Cover Types.md  Legacy IMAGE-LAND.md  Management Factor.md  Original IMAGE-LAND.md  markdown_index.rst  outputs.md
imagelcm/: __init__.py  analysis.py  asc_to_nc.py  check_npys.py  convert_outfiles.py  gdal_try.py  landalloc.py  lue_rw_try.py  np_test_module.py  np_test_run.py  parameters.py  plot_tabs.py  plotting.py  read.py  single_timestep.py  write.py
