[project]
name = "example_package_BEN_ROMERO_WILCOCK"
version = "0.0.1"
authors = [
  { name="Ben Romero-Wilcock", email="ben.romero-wilcock@mail.com" },
]
description = "Land cover model from the IMAGE 3.1, implemented with the LUE framework."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL 3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.pylint]
extension-pkg-allow-list = 'lue'